Finally created base model

--- a/create_w_companies.ipynb
+++ b/create_w_companies.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random\n",
+    "import sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +41,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_turkish.csv\")"
+    "df_train = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_turkish.csv\").convert_dtypes(convert_string=True).dropna()\n",
+    "splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
+    "df_train = pd.read_csv(\"hf://datasets/winvoker/turkish-sentiment-analysis-dataset/\" + splits[\"test\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140.11768203159215\n",
+      "82.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = 0\n",
+    "for text in df_train[\"text\"]:\n",
+    "    length += len(text)\n",
+    "print(length/len(df_train[\"text\"]))\n",
+    "\n",
+    "all_lengths = []\n",
+    "\n",
+    "for text in df_train[\"text\"]:\n",
+    "    all_lengths.append(len(text))\n",
+    "print(np.median(all_lengths))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = {\"Notr\":0,\"Positive\":2,\"Negative\":1}"
+    "labels = {\"Notr\":1,\"Positive\":3,\"Negative\":2}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Notr'"
+       "'Positive'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,18 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
-    "notr_bow = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/bows/notr_bow.csv\")\n",
-    "positive_bow = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/bows/positive_bow.csv\")\n",
-    "negative_bow = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/bows/negative_bow.csv\")"
+    "notr_bow = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/bows/notr_bow_not_cleared_test.csv\")\n",
+    "positive_bow = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/bows/positive_bow_not_cleared_test.csv\")\n",
+    "negative_bow = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/bows/negative_bow_not_cleared_test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9488\n",
-      "21008\n",
-      "11867\n"
+      "11444\n",
+      "20136\n",
+      "8921\n"
      ]
     }
    ],
@@ -180,7 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,19 +228,36 @@
     "positive_bow_set -= wrong_bow_set\n",
     "negative_bow_set -= wrong_bow_set\n",
     "#----------------------------------\n",
-    "notr_bow_set -= wrong_bow_set_pos_notr\n",
-    "positive_bow_set -= wrong_bow_set_pos_notr\n",
-    "#----------------------------------\n",
-    "positive_bow_set -= wrong_bow_set_pos_neg\n",
-    "negative_bow_set -= wrong_bow_set_pos_neg\n",
-    "#----------------------------------\n",
-    "notr_bow_set -= wrong_bow_set_neg_notr\n",
-    "negative_bow_set -= wrong_bow_set_neg_notr"
+    "positive_bow_set -= set(random.sample(list(wrong_bow_set_pos_neg),len(wrong_bow_set_pos_neg)//2))\n",
+    "negative_bow_set -= set(random.sample(list(wrong_bow_set_neg_notr),len(wrong_bow_set_neg_notr)//2))\n",
+    "positive_bow_set -= set(random.sample(list(wrong_bow_set_pos_notr),len(wrong_bow_set_pos_notr)//2))\n",
+    "#----------------------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23455\n",
+      "30451\n",
+      "21362\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(notr_bow_set))\n",
+    "print(len(positive_bow_set))\n",
+    "print(len(negative_bow_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,33 +265,38 @@
     "\n",
     "for text,label in zip(df_train_texts,sentiment):\n",
     "    for _ in range(1):\n",
-    "        company = np.random.choice(companies_array)\n",
-    "        splitted_text = text.split()\n",
-    "        labels = [0]*15\n",
-    "        index = np.random.randint(0,len(splitted_text))\n",
-    "        for i,word in enumerate(splitted_text):\n",
-    "            if word in notr_bow_set:\n",
-    "                labels[i]=0\n",
-    "            elif word in positive_bow_set:\n",
-    "                labels[i]=2\n",
-    "            elif word in negative_bow_set:\n",
-    "                labels[i]=1\n",
-    "        labels.insert(index,label)\n",
-    "        splitted_text.insert(index,company)\n",
-    "        texts_with_companies.append({\n",
-    "            \"text\":\" \".join(splitted_text),\n",
-    "            \"labels\":labels\n",
-    "        })"
+    "        splitted_text = text.split()[:15]\n",
+    "        if len(splitted_text) == 15:\n",
+    "            index = np.random.randint(0,len(splitted_text))\n",
+    "            company = np.random.choice(companies_array)\n",
+    "            labels = [0]*15\n",
+    "            for i,word in enumerate(splitted_text):\n",
+    "                if word in notr_bow_set:\n",
+    "                    labels[i]=1\n",
+    "                if word in negative_bow_set:\n",
+    "                    labels[i]=2\n",
+    "                if word in positive_bow_set:\n",
+    "                    labels[i]=3\n",
+    "            labels.insert(index,label)\n",
+    "            splitted_text.insert(index,company)\n",
+    "            texts_with_companies.append({\n",
+    "                \"text\":\" \".join(splitted_text),\n",
+    "                \"sentiment\":label,\n",
+    "                \"labels\":labels\n",
+    "            })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final = pd.DataFrame(texts_with_companies)\n",
-    "df_final.to_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_final.csv\",index=False)"
+    "import sklearn.utils\n",
+    "\n",
+    "\n",
+    "df_final = sklearn.utils.shuffle(pd.DataFrame(texts_with_companies),random_state=42)\n",
+    "df_final.to_csv(\"/home/musasina/projects/teknofest/msnet/datasets/test_final.csv\",index=False)"
    ]
   }
  ],
