--- a/create_bag_of_words.ipynb
+++ b/create_bag_of_words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/test_turkish.csv\")"
+    "data = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/train_turkish.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
+    "data = pd.read_csv(\"hf://datasets/winvoker/turkish-sentiment-analysis-dataset/\" + splits[\"test\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +53,9 @@
     "def create_bag_of_words(texts):\n",
     "    vectorizer = CountVectorizer()\n",
     "    X = vectorizer.fit_transform(texts)\n",
-    "    bag_of_words = pd.DataFrame(vectorizer.get_feature_names_out(), columns=[\"words\"])\n",
+    "    counts = X.sum(axis=0) > 5\n",
+    "    bag_of_words = vectorizer.get_feature_names_out().reshape((1,-1))[counts]\n",
+    "    bag_of_words = pd.DataFrame(bag_of_words, columns=[\"words\"])\n",
     "    return bag_of_words\n",
     "\n",
     "# Create bag of words for each label\n",
@@ -52,9 +64,9 @@
     "notr_bow = create_bag_of_words(notr_texts)\n",
     "\n",
     "# Saving the bag of words to CSV files\n",
-    "positive_bow.to_csv('/home/musasina/projects/teknofest/msnet/datasets/positive_bow_2.csv', index=False)\n",
-    "negative_bow.to_csv('/home/musasina/projects/teknofest/msnet/datasets/negative_bow_2.csv', index=False)\n",
-    "notr_bow.to_csv('/home/musasina/projects/teknofest/msnet/datasets/notr_bow_2.csv', index=False)"
+    "positive_bow.to_csv('/home/musasina/projects/teknofest/msnet/bows/positive_bow_not_cleared_test.csv', index=False)\n",
+    "negative_bow.to_csv('/home/musasina/projects/teknofest/msnet/bows/negative_bow_not_cleared_test.csv', index=False)\n",
+    "notr_bow.to_csv('/home/musasina/projects/teknofest/msnet/bows/notr_bow_not_cleared_test.csv', index=False)"
    ]
   }
  ],
