--- a/create_w_companies.ipynb
+++ b/create_w_companies.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
-    "import sklearn"
+    "import sklearn\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -79,28 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cut_text(text:str):\n",
-    "    splitted = str(text).split()\n",
-    "    splitted = splitted[:15]\n",
-    "    return \" \".join(splitted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train[\"text\"] = df_train[\"text\"].map(cut_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +116,7 @@
        "'Positive'"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11444\n",
-      "20136\n",
-      "8921\n"
+      "2719\n",
+      "5281\n",
+      "2057\n"
      ]
     }
    ],
@@ -211,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +208,7 @@
     "positive_bow_set -= wrong_bow_set\n",
     "negative_bow_set -= wrong_bow_set\n",
     "#----------------------------------\n",
-    "positive_bow_set -= set(random.sample(list(wrong_bow_set_pos_neg),len(wrong_bow_set_pos_neg)//2))\n",
+    "#positive_bow_set -= set(random.sample(list(wrong_bow_set_pos_neg),len(wrong_bow_set_pos_neg)//2))\n",
     "negative_bow_set -= set(random.sample(list(wrong_bow_set_neg_notr),len(wrong_bow_set_neg_notr)//2))\n",
     "positive_bow_set -= set(random.sample(list(wrong_bow_set_pos_notr),len(wrong_bow_set_pos_notr)//2))\n",
     "#----------------------------------"
@@ -236,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23455\n",
-      "30451\n",
-      "21362\n"
+      "5460\n",
+      "11457\n",
+      "5397\n"
      ]
     }
    ],
@@ -257,38 +237,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "texts_with_companies = []\n",
     "\n",
     "for text,label in zip(df_train_texts,sentiment):\n",
-    "    for _ in range(1):\n",
-    "        splitted_text = text.split()[:15]\n",
-    "        if len(splitted_text) == 15:\n",
-    "            index = np.random.randint(0,len(splitted_text))\n",
-    "            company = np.random.choice(companies_array)\n",
-    "            labels = [0]*15\n",
-    "            for i,word in enumerate(splitted_text):\n",
-    "                if word in notr_bow_set:\n",
-    "                    labels[i]=1\n",
+    "    left = 0\n",
+    "    right = 31\n",
+    "    seperated_texts = []\n",
+    "    splitted_text = text.split()\n",
+    "    while left<right:\n",
+    "        truncated_text = splitted_text[left:right]\n",
+    "        if len(truncated_text) == 0:\n",
+    "            break\n",
+    "        seperated_texts.append(truncated_text)\n",
+    "        left = deepcopy(right)\n",
+    "        right += 31\n",
+    "    for truncated_text in seperated_texts:\n",
+    "        index = np.random.randint(0,len(truncated_text))\n",
+    "        company = np.random.choice(companies_array)\n",
+    "        labels = [0]*31\n",
+    "        for i,word in enumerate(truncated_text):\n",
+    "            if word in notr_bow_set:\n",
+    "                labels[i]=1\n",
+    "            if label == 2:\n",
     "                if word in negative_bow_set:\n",
     "                    labels[i]=2\n",
+    "            elif label == 3:\n",
     "                if word in positive_bow_set:\n",
     "                    labels[i]=3\n",
-    "            labels.insert(index,label)\n",
-    "            splitted_text.insert(index,company)\n",
-    "            texts_with_companies.append({\n",
-    "                \"text\":\" \".join(splitted_text),\n",
-    "                \"sentiment\":label,\n",
-    "                \"labels\":labels\n",
-    "            })"
+    "        labels.insert(index,label)\n",
+    "        truncated_text.insert(index,company)\n",
+    "        texts_with_companies.append({\n",
+    "            \"text\":\" \".join(truncated_text),\n",
+    "            \"sentiment\":label,\n",
+    "            \"labels\":labels\n",
+    "        })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
