--- a/msnet/test_gpt2.ipynb
+++ b/msnet/test_gpt2.ipynb
@@ -2,77 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load model directly\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification,AutoModelForCausalLM\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"ytu-ce-cosmos/turkish-gpt2\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"dbmdz/bert-base-turkish-cased\",is_decoder=True)"
+    "tokenizer = AutoTokenizer.from_pretrained(\"ai-forever/mGPT\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"ai-forever/mGPT\",is_decoder=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BertLMHeadModel(\n",
-       "  (bert): BertModel(\n",
-       "    (embeddings): BertEmbeddings(\n",
-       "      (word_embeddings): Embedding(32000, 768, padding_idx=0)\n",
-       "      (position_embeddings): Embedding(512, 768)\n",
-       "      (token_type_embeddings): Embedding(2, 768)\n",
-       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "      (dropout): Dropout(p=0.1, inplace=False)\n",
-       "    )\n",
-       "    (encoder): BertEncoder(\n",
-       "      (layer): ModuleList(\n",
-       "        (0-11): 12 x BertLayer(\n",
-       "          (attention): BertAttention(\n",
-       "            (self): BertSdpaSelfAttention(\n",
-       "              (query): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (key): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (value): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            )\n",
-       "            (output): BertSelfOutput(\n",
-       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
-       "              (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "              (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (intermediate): BertIntermediate(\n",
-       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "            (intermediate_act_fn): GELUActivation()\n",
-       "          )\n",
-       "          (output): BertOutput(\n",
-       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "            (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "          )\n",
+       "GPT2LMHeadModel(\n",
+       "  (transformer): GPT2Model(\n",
+       "    (wte): Embedding(100000, 2048)\n",
+       "    (wpe): Embedding(2048, 2048)\n",
+       "    (drop): Dropout(p=0.1, inplace=False)\n",
+       "    (h): ModuleList(\n",
+       "      (0-23): 24 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((2048,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attn): GPT2SdpaAttention(\n",
+       "          (c_attn): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): LayerNorm((2048,), eps=1e-05, elementwise_affine=True)\n",
+       "        (mlp): GPT2MLP(\n",
+       "          (c_fc): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (act): NewGELUActivation()\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
        "        )\n",
        "      )\n",
        "    )\n",
+       "    (ln_f): LayerNorm((2048,), eps=1e-05, elementwise_affine=True)\n",
        "  )\n",
-       "  (cls): BertOnlyMLMHead(\n",
-       "    (predictions): BertLMPredictionHead(\n",
-       "      (transform): BertPredictionHeadTransform(\n",
-       "        (dense): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (transform_act_fn): GELUActivation()\n",
-       "        (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "      )\n",
-       "      (decoder): Linear(in_features=768, out_features=32000, bias=True)\n",
-       "    )\n",
-       "  )\n",
+       "  (lm_head): Linear(in_features=2048, out_features=100000, bias=False)\n",
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
