--- a/create_bag_of_words.ipynb
+++ b/create_bag_of_words.ipynb
@@ -38,10 +38,27 @@
    "outputs": [],
    "source": [
     "# Separate the data by labels\n",
-    "positive_texts = data[data['label'] == 'Positive']['text']\n",
-    "negative_texts = data[data['label'] == 'Negative']['text']\n",
-    "notr_texts = data[data['label'] == 'Notr']['text']\n",
-    "\n",
+    "positive_texts = data[data['label'] == 'Positive']\n",
+    "negative_texts = data[data['label'] == 'Negative']\n",
+    "notr_texts = data[data['label'] == 'Notr']\n",
+    "df_yasemin = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/yasemin_data.csv\")\n",
+    "df_yasemin_notr = df_yasemin[df_yasemin[\"label\"]==1].map(str)\n",
+    "df_yasemin_neg = df_yasemin[df_yasemin[\"label\"]==2].map(str)\n",
+    "df_yasemin_pos = df_yasemin[df_yasemin[\"label\"]==3].map(str)\n",
+    "df_yasemin_notr[df_yasemin_notr[\"label\"]==1] = \"Notr\"\n",
+    "df_yasemin_neg[df_yasemin_neg[\"label\"]==2] = \"Negative\"\n",
+    "df_yasemin_pos[df_yasemin_pos[\"label\"]==3] = \"Positive\"\n",
+    "df_emre = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/emre_data.csv\")\n",
+    "df_emre_notr = df_emre[df_emre[\"label\"]==1].map(str)\n",
+    "df_emre_neg = df_emre[df_emre[\"label\"]==2].map(str)\n",
+    "df_emre_pos = df_emre[df_emre[\"label\"]==3].map(str)\n",
+    "df_emre_notr[df_emre_notr[\"label\"]==1] = \"Notr\"\n",
+    "df_emre_neg[df_emre_neg[\"label\"]==2] = \"Negative\"\n",
+    "df_emre_pos[df_emre_pos[\"label\"]==3] = \"Positive\"\n",
+    "data.drop(\"dataset\",axis=1)\n",
+    "data.drop(\"dataset\",axis=1)\n",
+    "data.drop(\"dataset\",axis=1)\n",
+    "data = pd.concat((positive_texts,negative_texts,notr_texts,df_yasemin_notr,df_yasemin_neg,df_yasemin_pos,df_emre_pos,df_emre_neg,df_emre_notr),ignore_index=True)\n",
     "# Function to create a bag of words\n",
     "def create_bag_of_words(texts):\n",
     "    vectorizer = CountVectorizer()\n",
@@ -51,9 +68,9 @@
     "    return bag_of_words\n",
     "\n",
     "# Create bag of words for each label\n",
-    "positive_bow = create_bag_of_words(positive_texts)\n",
-    "negative_bow = create_bag_of_words(negative_texts)\n",
-    "notr_bow = create_bag_of_words(notr_texts)\n",
+    "positive_bow = create_bag_of_words(data[data[\"label\"]==\"Positive\"][\"text\"])\n",
+    "negative_bow = create_bag_of_words(data[data[\"label\"]==\"Negative\"][\"text\"])\n",
+    "notr_bow = create_bag_of_words(data[data[\"label\"]==\"Notr\"][\"text\"])\n",
     "\n",
     "# Saving the bag of words to CSV files\n",
     "positive_bow.to_csv('/home/musasina/projects/teknofest/msnet/bows/positive_bow_not_cleared.csv', index=False)\n",
