--- a/create_w_companies.ipynb
+++ b/create_w_companies.ipynb
@@ -42,18 +42,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_yasemin = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/yasemin_data.csv\")\n",
+    "df_yasemin_notr = df_yasemin[df_yasemin[\"label\"]==1].map(str)\n",
+    "df_yasemin_neg = df_yasemin[df_yasemin[\"label\"]==2].map(str)\n",
+    "df_yasemin_pos = df_yasemin[df_yasemin[\"label\"]==3].map(str)\n",
+    "df_yasemin_notr[df_yasemin_notr[\"label\"]==1] = \"Notr\"\n",
+    "df_yasemin_neg[df_yasemin_neg[\"label\"]==2] = \"Negative\"\n",
+    "df_yasemin_pos[df_yasemin_pos[\"label\"]==3] = \"Positive\"\n",
+    "df_emre = pd.read_csv(\"/home/musasina/projects/teknofest/msnet/datasets/emre_data.csv\")\n",
+    "df_emre_notr = df_emre[df_emre[\"label\"]==1].map(str)\n",
+    "df_emre_neg = df_emre[df_emre[\"label\"]==2].map(str)\n",
+    "df_emre_pos = df_emre[df_emre[\"label\"]==3].map(str)\n",
+    "df_emre_notr[df_emre_notr[\"label\"]==1] = \"Notr\"\n",
+    "df_emre_neg[df_emre_neg[\"label\"]==2] = \"Negative\"\n",
+    "df_emre_pos[df_emre_pos[\"label\"]==3] = \"Positive\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "splits = {'train': 'train.csv', 'test': 'test.csv'}\n",
     "df = pd.read_csv(\"hf://datasets/winvoker/turkish-sentiment-analysis-dataset/\" + splits[\"train\"])\n",
     "df_2 = pd.read_csv(\"hf://datasets/winvoker/turkish-sentiment-analysis-dataset/\" + splits[\"test\"])\n",
-    "df_train_notr = pd.concat((df[df[\"label\"]==\"Notr\"],df_2[df_2[\"label\"]==\"Notr\"]),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()\n",
-    "df_train_pos = pd.concat((df[df[\"label\"]==\"Positive\"],df_2[df_2[\"label\"]==\"Positive\"]),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()\n",
-    "df_train_neg = pd.concat((df[df[\"label\"]==\"Negative\"],df_2[df_2[\"label\"]==\"Negative\"]),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()"
+    "df.drop(\"dataset\")\n",
+    "df_2.drop(\"dataset\")\n",
+    "df_train_notr = pd.concat((df[df[\"label\"]==\"Notr\"],df_2[df_2[\"label\"]==\"Notr\"],df_yasemin_notr,df_emre_notr),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()\n",
+    "df_train_pos = pd.concat((df[df[\"label\"]==\"Positive\"],df_2[df_2[\"label\"]==\"Positive\"],df_yasemin_pos,df_emre_pos),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()\n",
+    "df_train_neg = pd.concat((df[df[\"label\"]==\"Negative\"],df_2[df_2[\"label\"]==\"Negative\"],df_yasemin_neg,df_emre_neg),ignore_index=True)[\"text\"].convert_dtypes(convert_string=True).to_list()"
    ]
   },
   {
@@ -266,12 +288,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_data(seperated_texts:list,label,bow_set,add_palces=True):\n",
+    "def create_data(seperated_texts:list,label,add_palces=True):\n",
     "    for truncated_text in seperated_texts:\n",
-    "        labels = [0]*121\n",
+    "        labels = [0]*25\n",
     "        for i,word in enumerate(truncated_text):\n",
-    "            if word in bow_set:\n",
-    "                labels[i]=label\n",
+    "            if label == 1:\n",
+    "                if word in notr_bow_set:\n",
+    "                    labels[i]=1\n",
+    "                if word in wrong_bow_set_pos_neg:\n",
+    "                    labels[i]=1\n",
+    "            elif label == 2:\n",
+    "                if word in negative_bow_set:\n",
+    "                    labels[i]=2\n",
+    "            elif label ==3:\n",
+    "                if word in positive_bow_set:\n",
+    "                    labels[i]=3\n",
     "        if add_palces:\n",
     "            yield add_place_to_text(truncated_text,labels,label)\n",
     "        else:\n",
@@ -284,24 +315,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_data_loop(data,sentiment,useless,bow_set):\n",
+    "def create_data_loop(data,sentiment):\n",
+    "    useless = []\n",
     "    for text,label in zip(data,repeat(sentiment)):\n",
     "        left = 0\n",
-    "        right = 121\n",
+    "        right = 25\n",
     "        seperated_texts = []\n",
     "        splitted_text = text.split()\n",
     "        count = 0\n",
     "        while left<right:\n",
     "            truncated_text = splitted_text[left:right]\n",
-    "            if len(truncated_text) <121:\n",
-    "                if count == 0:\n",
-    "                    useless.append(\" \".join(truncated_text))\n",
+    "            if len(truncated_text) <25:\n",
+    "                useless.append(\" \".join(truncated_text))\n",
     "                break\n",
-    "            count += 1\n",
     "            seperated_texts.append(truncated_text)\n",
     "            left = deepcopy(right)\n",
-    "            right += 121\n",
-    "        for truncated_text,labels in create_data(seperated_texts,label,bow_set):\n",
+    "            right += 25\n",
+    "        for truncated_text,labels in create_data(seperated_texts,label):\n",
     "            texts_with_companies.append({\n",
     "                \"text\":\" \".join(truncated_text),\n",
     "                \"sentiment\":label,\n",
@@ -316,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bow_sets = {1:notr_bow_set,2:negative_bow_set,3:positive_bow_set}"
+    "label_dict = {\"Notr\":1,\"Negative\":2,\"Positive\":3}"
    ]
   },
   {
@@ -325,27 +355,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "useless_pos = create_data_loop(df_train_pos,3,useless_pos,positive_bow_set)\n",
-    "useless_neg = create_data_loop(df_train_neg,2,useless_neg,negative_bow_set)\n",
-    "useless_notr =create_data_loop(df_train_notr,1,useless_notr,notr_bow_set)"
+    "df_useless_notr = create_data_loop(df_train_notr,1)\n",
+    "df_useless_neg = create_data_loop(df_train_neg,2)\n",
+    "df_useless_pos = create_data_loop(df_train_pos,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "170917\n",
+      "262166\n",
+      "56561\n"
+     ]
+    }
+   ],
    "source": [
-    "df_useless = pd.DataFrame({\"text\": useless_notr+useless_neg+useless_pos,\"label\":([1]*len(useless_notr))+([2]*len(useless_neg))+([3]*len(useless_pos))})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_useless = sklearn.utils.shuffle(df_useless,random_state=42)"
+    "print(len(df_train_notr))\n",
+    "print(len(df_train_pos))\n",
+    "print(len(df_train_neg))"
    ]
   },
   {
@@ -354,42 +387,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "concated_text = []\n",
-    "labels = []\n",
-    "for text,label in zip(df_useless[\"text\"],df_useless[\"label\"]):\n",
-    "    splitted_text = str(text).split()\n",
-    "    for truncated_text,return_labels in create_data([splitted_text],label,bow_sets[label],add_palces=False):\n",
-    "        concated_text += truncated_text[:len(splitted_text)]\n",
-    "        labels += return_labels[:len(splitted_text)]\n",
-    "    if len(concated_text) < 121:\n",
-    "        continue\n",
-    "    concated_text = concated_text[:121]\n",
-    "    labels = labels[:121]\n",
-    "    notr_count = labels.count(1)\n",
-    "    neg_count = labels.count(2)\n",
-    "    pos_count = labels.count(3)\n",
-    "    overall_label = 0\n",
-    "    if notr_count == np.max([notr_count,neg_count,pos_count]):\n",
-    "        concated_text,labels = add_place_to_text(concated_text,labels,1)\n",
-    "        overall_label = 1\n",
-    "    elif neg_count == np.max([notr_count,neg_count,pos_count]):\n",
-    "        concated_text,labels = add_place_to_text(concated_text,labels,2)\n",
-    "        overall_label = 2\n",
-    "    else:\n",
-    "        concated_text,labels = add_place_to_text(concated_text,labels,3)\n",
-    "        overall_label = 3\n",
-    "    texts_with_companies.append({\n",
-    "    \"text\":\" \".join(concated_text),\n",
-    "    \"sentiment\":overall_label,\n",
-    "    \"labels\":deepcopy(labels)\n",
-    "    })\n",
-    "    concated_text = []\n",
-    "    labels = []"
+    "df_useless = pd.DataFrame({\"text\":df_useless_notr+df_useless_neg+df_useless_pos,\"label\":[1]*len(df_useless_notr)+[2]*len(df_useless_neg)+[3]*len(df_useless_pos)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_useless_notr = df_useless[df_useless[\"label\"]==1].sample(56561,random_state=42)\n",
+    "df_useless_neg = df_useless[df_useless[\"label\"]==2].sample(56561,random_state=42)\n",
+    "df_useless_pos = df_useless[df_useless[\"label\"]==3].sample(56561,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56561\n",
+      "56561\n",
+      "56561\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df_useless_notr))\n",
+    "print(len(df_useless_neg))\n",
+    "print(len(df_useless_pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_useless = pd.concat((df_useless_notr,df_useless_neg,df_useless_pos),ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_useless = sklearn.utils.shuffle(df_useless,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(10):\n",
+    "    df_useless = sklearn.utils.shuffle(df_useless,random_state=42)\n",
+    "    concated_text = []\n",
+    "    labels = []\n",
+    "    for text,label in zip(df_useless[\"text\"],df_useless[\"label\"]):\n",
+    "        splitted_text = str(text).split()\n",
+    "        for truncated_text,return_labels in create_data([splitted_text],label,add_palces=False):\n",
+    "            concated_text += truncated_text[:len(splitted_text)]\n",
+    "            labels += return_labels[:len(splitted_text)]\n",
+    "        if len(concated_text) < 25:\n",
+    "            continue\n",
+    "        concated_text = concated_text[:25]\n",
+    "        labels = labels[:25]\n",
+    "        notr_count = labels.count(1)\n",
+    "        neg_count = labels.count(2)\n",
+    "        pos_count = labels.count(3)\n",
+    "        overall_label = 0\n",
+    "        if notr_count == np.max([notr_count,neg_count,pos_count]):\n",
+    "            concated_text,labels = add_place_to_text(concated_text,labels,1)\n",
+    "            overall_label = 1\n",
+    "        elif neg_count == np.max([notr_count,neg_count,pos_count]):\n",
+    "            concated_text,labels = add_place_to_text(concated_text,labels,2)\n",
+    "            overall_label = 2\n",
+    "        else:\n",
+    "            concated_text,labels = add_place_to_text(concated_text,labels,3)\n",
+    "            overall_label = 3\n",
+    "        texts_with_companies.append({\n",
+    "        \"text\":\" \".join(concated_text),\n",
+    "        \"sentiment\":overall_label,\n",
+    "        \"labels\":deepcopy(labels)\n",
+    "        })\n",
+    "        concated_text = []\n",
+    "        labels = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
