--- a/msnet/test_gpt2.ipynb
+++ b/msnet/test_gpt2.ipynb
@@ -9,8 +9,8 @@
     "# Load model directly\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification,AutoModelForCausalLM\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"ai-forever/mGPT\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"ai-forever/mGPT\",is_decoder=True)"
+    "tokenizer = AutoTokenizer.from_pretrained(\"ytu-ce-cosmos/turkish-gpt2\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"ytu-ce-cosmos/turkish-gpt2\")"
    ]
   },
   {
@@ -23,19 +23,19 @@
       "text/plain": [
        "GPT2LMHeadModel(\n",
        "  (transformer): GPT2Model(\n",
-       "    (wte): Embedding(100000, 2048)\n",
-       "    (wpe): Embedding(2048, 2048)\n",
+       "    (wte): Embedding(50257, 768)\n",
+       "    (wpe): Embedding(1024, 768)\n",
        "    (drop): Dropout(p=0.1, inplace=False)\n",
        "    (h): ModuleList(\n",
-       "      (0-23): 24 x GPT2Block(\n",
-       "        (ln_1): LayerNorm((2048,), eps=1e-05, elementwise_affine=True)\n",
+       "      (0-11): 12 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
        "        (attn): GPT2SdpaAttention(\n",
        "          (c_attn): Conv1D()\n",
        "          (c_proj): Conv1D()\n",
        "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
        "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
        "        )\n",
-       "        (ln_2): LayerNorm((2048,), eps=1e-05, elementwise_affine=True)\n",
+       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
        "        (mlp): GPT2MLP(\n",
        "          (c_fc): Conv1D()\n",
        "          (c_proj): Conv1D()\n",
@@ -44,9 +44,9 @@
        "        )\n",
        "      )\n",
        "    )\n",
-       "    (ln_f): LayerNorm((2048,), eps=1e-05, elementwise_affine=True)\n",
+       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
        "  )\n",
-       "  (lm_head): Linear(in_features=2048, out_features=100000, bias=False)\n",
+       "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
        ")"
       ]
      },
